--- a/MorrisPhotos.Web/Views/Home/SchoolYearDetails.cshtml
+++ b/MorrisPhotos.Web/Views/Home/SchoolYearDetails.cshtml
@@ -1,17 +1,44 @@
-﻿
+﻿@model MorrisPhotos.Web.ViewModels.Home.SchoolYearDetailsViewModel
+
 @{
-    ViewData["Title"] = "School Year Details";
+    ViewData["Title"] = $"{Model.SchoolYear.Name} School Year Photos";
 }
 
-<!-- Section-->
-<section class="module parallax" data-background="assets/images/module-1.jpg" data-overlay="0.5">
+<section class="module-cover parallax" data-background="/images/module-14.jpg" data-overlay="0.5">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-9 m-auto text-center">
-                <h2>Parallax Section.</h2>
-                <p class="lead">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+            <div class="col-md-12">
+                <h2>@ViewData["Title"]</h2>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="breadcrumb-item active">
+                        @Model.SchoolYear.Name
+                    </li>
+                </ol>
             </div>
         </div>
     </div>
 </section>
-<!-- Section end-->
+
+<section class="module">
+    <div class="container">
+        <div class="row">
+            @foreach (var category in Model.Categories)
+            {
+                <div class="col-md-3">
+                    <div class="shop-grid-item">
+                        <div class="shop-item-thumb">
+                            <a asp-area="" asp-controller="Home" asp-action="SchoolYearAndCategoryDetails" asp-route-schoolYear="@Model.SchoolYear.Name" asp-route-categoryName="@category.UrlName"><img src="@category.ThumbnailImageUrl" alt="@category.DisplayName" class="img-responsive"></a>
+                            <div class="shop-item-hidden"><a class="btn btn-new-white" href="#">Browse</a></div>
+                        </div>
+                        <div class="shop-item-captions">
+                            <h6 class="shop-item-title">@category.DisplayName</h6>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
