--- a/MorrisPhotos.Web/Views/Home/CategoryDetails.cshtml
+++ b/MorrisPhotos.Web/Views/Home/CategoryDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MorrisPhotos.Web.ViewModels.Home.CategoryDetailsViewModel
 
 @{
-    ViewData["Title"] = $"{Model.Category.DisplayName} Photos";
+    ViewData["Title"] = $"{Model.Category.Name} Photos";
 }
 
 <section class="module-cover parallax text-center" data-background="/images/module-20.jpg" data-overlay="0.5">
