--- a/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryAndEventDetails.cshtml
+++ b/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryAndEventDetails.cshtml
@@ -1,8 +1,29 @@
 ﻿@model MorrisPhotos.Web.ViewModels.Home.SchoolYearAndCategoryAndEventDetailsViewModel
 
 @{
-    ViewData["Title"] = "SchoolYearAndCategoryAndEventDetails";
+    ViewData["Title"] = $"{Model.PhotoEvent.Name} Photos";
 }
 
-<h2>SchoolYearAndCategoryAndEventDetails</h2>
-
+<section class="module-cover parallax" data-background="/images/module-14.jpg" data-overlay="0.5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>@ViewData["Title"]</h2>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a asp-area="" asp-controller="Home" asp-action="SchoolYearDetails" asp-route-schoolYearName="@Model.SchoolYear.Name">@Model.SchoolYear.Name</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a asp-area="" asp-controller="Home" asp-action="SchoolYearAndCategoryDetails" asp-route-schoolYearName="@Model.SchoolYear.Name" asp-route-categoryName="@Model.Category.UrlName">@Model.Category.Name</a>
+                    </li>
+                    <li class="breadcrumb-item active">
+                        @Model.PhotoEvent.Name
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</section>
