--- a/MorrisPhotos.Web/Views/Home/Index.cshtml
+++ b/MorrisPhotos.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<section class="module-cover parallax text-center fullscreen" data-background="/images/module-2.jpg" data-overlay="0.6">
+<section class="module-cover parallax text-center fullscreen" data-background="/images/module-2.jpg" data-overlay="0.5" data-gradient="1">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
