--- a/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryAndEventDetails.cshtml
+++ b/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryAndEventDetails.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = $"{Model.PhotoEvent.Name} Photos";
 }
 
-<section class="module-cover parallax" data-background="/images/module-14.jpg" data-overlay="0.5">
+<section class="module-page-title bg-dark">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>@ViewData["Title"]</h2>
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <div class="page-title-desc">
+                    <h1 class="page-title-heading text-light">@ViewData["Title"]</h1>
+                </div>
+            </div>
+            <div class="col-md-6">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
                         <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -24,6 +28,23 @@
                     </li>
                 </ol>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="module">
+    <div class="container">
+        <div class="row row-portfolio" data-columns="3">
+            <div class="grid-sizer"></div>
+            @foreach (var photo in Model.Photos)
+            {
+                <div class="portfolio-item">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-item-img"><img src="@photo.ThumbnailImageUrl" /></div>
+                    <a class="portfolio-item-link" href="@photo.ImageUrl"></a>
+                </div>
+                </div>
+            }
         </div>
     </div>
 </section>
