--- a/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryDetails.cshtml
+++ b/MorrisPhotos.Web/Views/Home/SchoolYearAndCategoryDetails.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = $"{Model.SchoolYear.Name} {Model.Category.Name} Photos";
 }
 
-<section class="module-cover parallax" data-background="/images/module-14.jpg" data-overlay="0.5">
+<section class="module-page-title bg-dark">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>@ViewData["Title"]</h2>
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <div class="page-title-desc">
+                    <h1 class="page-title-heading text-light">@ViewData["Title"]</h1>
+                </div>
+            </div>
+            <div class="col-md-6">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
                         <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
