Initial commit for a real photo gallery

--- a/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
+++ b/MorrisPhotos.Web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <environment exclude="Development">
         <link href="~/css/template.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
+
+    @RenderSection("Styles", required: false)
 </head>
 <body>
 
